gccida/c3/copy_loop_headers
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:591:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:591:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:592:4: error: expected ';' after expression
rtx v6; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:592:5: error: use of undeclared identifier 'v6'
rtx v6; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:593:4: error: expected ';' after expression
rtx v7; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:593:5: error: use of undeclared identifier 'v7'
rtx v7; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:604:6: error: use of undeclared identifier 'v18'
rtx *v18; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:607:4: error: expected ';' after expression
rtx v21; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:607:5: error: use of undeclared identifier 'v21'
rtx v21; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:609:4: error: expected ';' after expression
rtx v23; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:609:5: error: use of undeclared identifier 'v23'
rtx v23; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:612:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:616:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:616:5: error: use of undeclared identifier 'v30'
rtx v30; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:630:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:630:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:631:4: error: expected ';' after expression
rtx v45; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:631:5: error: use of undeclared identifier 'v45'
rtx v45; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/jump.c:633:4: error: expected ';' after expression
rtx v47; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_headers/src/obj/jump.o] Error 1
